# Kimi

./: AVANT_GARDE_PORTFOLIO
AVANT_GARDE_PORTFOLIO_FILES/: .gitignore  AGENTS.md  index.html  metadata.json  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
AVANT_GARDE_PORTFOLIO_FILES/src/: App.tsx  main.tsx
AVANT_GARDE_PORTFOLIO_FILES/src/components/: Clock.tsx  CommandPalette.tsx  Layout.tsx  LiquidBackground.tsx  Views.tsx  index.ts
AVANT_GARDE_PORTFOLIO_FILES/src/content/: registry.ts  types.ts
AVANT_GARDE_PORTFOLIO_FILES/src/hooks/: useKeyboardShortcuts.ts
AVANT_GARDE_PORTFOLIO_FILES/src/styles/: globals.css
aegis-common-schema/: .gitignore  AGENTS.md  README.md  pyproject.toml
aegis-common-schema/.github/workflows/: ci.yml
aegis-common-schema/aegis_common_schema/: __init__.py  access_control_engine.py  base.py  policy_obligations.py  supply_chain.py
aegis-common-schema/apps/aegis_demo_api/: __init__.py  main.py  security_context.py
aegis-common-schema/docs/: ci-workflow-reference.yml  system-design.md
aegis-common-schema/tests/: conftest.py
aegis-common-schema/tests/integration/: test_classification_redaction.py  test_demo_api_flow.py
